# demoji

./: .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  release.sh  rustfmt.toml
.github/workflows/: ci.yml  homebrew.yml  release.yml
.villalobos/: TASK_1.1_COMPLETION.md
.villalobos/context/: performance-audit.md  todo.md
.villalobos/scripts/: build.sh  test.sh
.villalobos/state/: 6114a7d2-36de-47a1-a7d9-02c6c2994657.json  8273299a-5be3-4997-b0e8-2107f4b77e63.json
homebrew/: demoji.rb
npm/: README.md  package.json
npm/scripts/: install.js
src/: lib.rs  main.rs
src/cli/: args.rs  init.rs  mod.rs  output.rs
src/config/: mod.rs
src/core/: backup.rs  emoji.rs  error.rs  mod.rs  processor.rs  replacer.rs  walker.rs
src/watch/: mod.rs
tests/: README.md  cli_tests.rs
tests/integration/: basic_test.rs
