[package]
name = "demoji"
version = "0.1.0"
edition = "2021"
authors = ["demoji contributors"]
description = "A fast CLI tool to remove or replace emoji characters from source code files"
license = "MIT"
repository = "https://github.com/yourusername/demoji"
keywords = ["emoji", "cli", "source-code", "cleanup"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"              # Handles gitignore + walking
notify = "6"                # File watching
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
colored = "2"
rayon = "1"                 # Parallel processing

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "demoji"
path = "src/main.rs"

